--- a/stable/config_api.ini
+++ b/stable/config_api.ini
@@ -39,3 +39,11 @@ access_token_secret : ZtSy6vLKXZBgx3il0ALsndJyHdfmroQ5jTiQoV1WWxoOx
 consumer_key : GhEpCyK6lM324g6fB5zXZJxXd
 consumer_secret : APTDtEGHXirO6GnuovkCNJCqvoWeLcPz3s3737skMoXXjv6jzs
 bearer_token : AAAAAAAAAAAAAAAAAAAAADrhIQEAAAAASelWvETQDkZcXhSa33XmhdInRpg%3D8bDZBvxdkgunEjZkey1cMXXhnP5IKslVro4RYdNIjbOH6quKCU
+
+[Credential5]
+
+name: Severin
+access_token : 730427598631743491-mwJLTb3O0odXn7wRfP9ft0JvcnqyMR7
+access_token_secret : jS7KF301YIY9Q6CROa2eoBc3ZPnIYcjF64Pv4ZiLe6y4a
+consumer_key : tQR8KqPTPAQRojvxAV3Q1zc75
+consumer_secret : eGFaSQ6bYB3dtoQFpyohBqTiE5huT5yGF6QLcbaNxdeU3MgyA6
