--- a/stable/config_mongodb.ini
+++ b/stable/config_mongodb.ini
@@ -1,7 +1,7 @@
 [MongoDB]
-ip : 34.65.31.186
+ip : 127.0.0.1
 port : 27017
-username : anino
-password : StrongPassword!
+username : admin
+password : CovidTweets
 authSource : admin
 database : tweet_data
